# bezier-curve

./: README.md  setup.py
core/: CMakeLists.txt
core/bezier_curve/: bezier_curve.cpp  bezier_curve.h  bezier_curve_binding.cpp
src/: __init__.py  methods.py
tests/: test_bezier_curve.py
